--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,7 @@
 .main-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px 30px;
+  background-color: white;
 }
