--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;600&display=swap');
+
 * {
   box-sizing: border-box;
+  font-family: 'Sarabun', sans-serif;
 }
 
 body {
