--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,4 +2,10 @@ main {
   min-height: 100vh;
   width: 100vw;
   background-color: beige;
+  padding-bottom: 40px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
