--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,6 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 30px;
+  padding: 10px 40px;
   background-color: white;
+}
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 25%;
 }
