--- a/src/Components/HomeInfo/HomeInfo.css
+++ b/src/Components/HomeInfo/HomeInfo.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  padding-top: 20px;
 }
 
 .home-img {
@@ -12,4 +13,6 @@
 .home-info {
   width: 65%;
   background-color:thistle;
+  padding: 2%;
+  font-size: 25px;
 }
