--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,12 @@
 .main-header {
+  height: 10vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 40px;
+  padding: 0 40px;
   background-color: white;
+  position: sticky;
+  top: 0;
 }
 
 .socials {
@@ -11,5 +14,5 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 25%;
+  width: 50%;
 }
