--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -1,20 +1,63 @@
 .project-box {
   width: 30%;
   border: 1px solid black;
-  padding: 10px;
+  padding: 15px;
+  height: 130px;
+  justify-content: center;
 }
 
-.info-box {
+.project-box:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+.date-info {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  align-items: center;
 }
 
-.info-box h3, .info-box p {
-  margin-bottom: 0;
+.date-info h3, .date-info p {
+  margin: 0;
+}
+
+.tech-list {
+  display: flex; 
+  justify-content: space-evenly;
+  margin-top: 10%;
+}
+
+.proj-small-tech {
+  padding: 3px 7px 5px;
+  border-radius: 10px;
+}
+
+.small-tech-text {
+  color: white;
+}
+
+.light-blue {
+  background-color: rgb(89, 187, 248);
+}
+
+.dark-blue {
+  background-color: darkblue;
+}
+
+.purple {
+  background-color: purple;
+}
+
+.grey {
+  background-color: rgb(103, 103, 103);
 }
 
 .active-project {
   background-color: white;
+}
+
+.active-project:hover {
+  background-color: white;
+  color: black;
+  cursor: default;
 }
