--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: 'Sarabun', sans-serif;
   scroll-behavior: smooth;
+  scroll-margin-top: 10vh;
 }
 
 body {
