--- a/src/Components/ProjectDisplay/ProjectDisplay.css
+++ b/src/Components/ProjectDisplay/ProjectDisplay.css
@@ -1,9 +1,29 @@
 .project-display {
-  min-height: 375px;
+  min-height: 200px;
   border-radius: 5px;
   box-shadow: rgb(0, 0, 0, 0.15) 0 0 10px;
   background-color: white;
   padding: 4%;
+}
+
+swiper-container {
+  height: 500px;
+  width: 95%;
+  padding: 10px 0 30px;
+  margin-bottom: 20px;
+  border-bottom: 2px solid black;
+}
+
+swiper-slide {
+  display: flex;
+  justify-content: center;
+}
+
+.swiper-image {
+  width: 90%;
+  height: 100%;
+  border-radius: 5px;
+  box-shadow: rgb(0, 0, 0, 0.3) 0 0 10px;
 }
 
 .project-display h3 {
