--- a/src/Components/ProjectDisplay/ProjectDisplay.css
+++ b/src/Components/ProjectDisplay/ProjectDisplay.css
@@ -42,3 +42,24 @@ swiper-slide {
 .spec-list li {
   margin-top: 5px;
 }
+
+.proj-linkbox {
+  display: flex;
+  justify-content: right;
+  gap: 20px;
+}
+
+.proj-link {
+  display: flex;
+  align-items: center;
+}
+
+.proj-link:hover {
+  text-decoration: underline;
+}
+
+.proj-link-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 5px;
+}
