--- a/src/Components/AboutView/AboutView.css
+++ b/src/Components/AboutView/AboutView.css
@@ -10,13 +10,23 @@
 .about-info-section {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: top;
 }
 
 .about-img {
-  width: 30%;
+  width: 25%;
+}
+
+.about-img img {
+  height: 100%;
+  width: 100%;
+  border-radius: 25%;
+  border: 2.5px solid black;
+  box-shadow: rgb(0, 0, 0, 0.3) 0 0 15px;
 }
 
 .about-text { 
   width: 60%;
+  font-size: 20px;
+  line-height: 1.5;
 }
