--- a/src/Components/HomeInfo/HomeInfo.css
+++ b/src/Components/HomeInfo/HomeInfo.css
@@ -28,18 +28,16 @@
 }
 
 .home-img {
-  width: 35%;
+  max-width: 35%;
 }
 
 .home-img img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
   border: 3px solid black;
   border-radius: 50%;
   animation-name: corners;
-  animation-duration: 12s;
+  animation-duration: 8s;
   animation-iteration-count: infinite;
-  animation-duration: alternate;
 }
 
 .tech-box {
@@ -72,21 +70,21 @@
 
 @keyframes corners {
   0% {
-    border-top-right-radius: 35%;
     border-top-left-radius: 40%;
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 30%;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 35%;
+    border-bottom-left-radius: 60%;
   }
   50% {
-    border-top-right-radius: 55%;
     border-top-left-radius: 60%;
-    border-bottom-left-radius: 35%;
-    border-bottom-right-radius: 40%;
+    border-top-right-radius: 35%;
+    border-bottom-right-radius: 55%;
+    border-bottom-left-radius: 40%;
   }
   100% {
-    border-top-right-radius: 35%;
     border-top-left-radius: 40%;
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 30%;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 35%;
+    border-bottom-left-radius: 60%;
   }
 }
