--- a/src/Components/ProjectDisplay/ProjectDisplay.css
+++ b/src/Components/ProjectDisplay/ProjectDisplay.css
@@ -34,6 +34,10 @@
   display: block;
 }
 
+.swiper-button-next::after, .swiper-button-prev::after {
+  color: black;
+}
+
 .swiper-image {
   box-shadow: rgb(0, 0, 0, 0.15) 0 0 10px;
 }
