--- a/src/Components/AboutView/AboutView.css
+++ b/src/Components/AboutView/AboutView.css
@@ -7,17 +7,22 @@
   background-image: linear-gradient(#f5f5f5 2%, white 3% 97%, #f5f5f5 98% 100%);
 }
 
+.about-view h2 {
+  margin-top: 0;
+}
+
 .about-info-section {
   display: flex;
   justify-content: space-evenly;
-  align-items: top;
 }
 
 .about-img {
-  width: 25%;
+  width: 250px;
+  height: 250px;
 }
 
 .about-img img {
+  display: block;
   height: 100%;
   width: 100%;
   border-radius: 25%;
@@ -29,4 +34,9 @@
   width: 60%;
   font-size: 20px;
   line-height: 1.5;
+  padding: 5px;
+}
+
+.about-text p {
+  margin: 0;
 }
