--- a/src/Components/ContactView/ContactView.css
+++ b/src/Components/ContactView/ContactView.css
@@ -1,5 +1,24 @@
 .contact-view {
   background-image: linear-gradient(#f5f5f5 2%, white 3% 100%);
   background-color: white;
-  min-height: 400px;
+  min-height: 300px;
+  padding: 30px 10%;
+}
+
+.email-icon {
+  display: flex;
+  flex-direction: row;
+}
+
+.email-icon {
+  height: 30px;
+}
+
+.contact-view h2 {
+  margin: 0;
+}
+
+.contact-view h3 {
+  display: inline-block;
+  margin: 0;
 }
