--- a/src/Components/ContactView/ContactView.css
+++ b/src/Components/ContactView/ContactView.css
@@ -1,24 +1,46 @@
 .contact-view {
   background-image: linear-gradient(#f5f5f5 2%, white 3% 100%);
   background-color: white;
-  min-height: 300px;
+  min-height: 250px;
   padding: 30px 10%;
 }
 
-.email-icon {
+.contact-box {
   display: flex;
-  flex-direction: row;
+  width: 100%;
+  height: 100px;
+  align-items: center;
+}
+
+.con {
+  width: 45%;
+  display: flex;
 }
 
 .email-icon {
-  height: 30px;
+  width: 60px;
+  height: 60px;
+  padding: 10px;
+  border-radius: 50%;
+  box-shadow: rgb(0, 0, 0, 0.25) 0 0 10px;
 }
 
 .contact-view h2 {
   margin: 0;
 }
 
-.contact-view h3 {
-  display: inline-block;
+.contact-box h3 {
+  font-size: 20px;
+  margin: 4px 0 0 0;
+}
+
+.contact-box p, .contact-box a {
+  font-size: 20px;
   margin: 0;
+}
+
+.con-info-box {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
 }
