--- a/src/Components/AboutView/AboutView.css
+++ b/src/Components/AboutView/AboutView.css
@@ -17,8 +17,8 @@
 }
 
 .about-img {
-  width: 250px;
-  height: 250px;
+  max-width: 250px;
+  max-height: 250px;
 }
 
 .about-img img {
@@ -39,4 +39,24 @@
 
 .about-text p {
   margin: 0;
+}
+
+@media screen and (max-width: 900px) {
+  .about-info-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-img {
+    margin-bottom: 25px;
+  }
+
+  .about-text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .about-text p {
+    font-size: 18px;
+  }
 }
