--- a/src/Components/ContactView/ContactView.css
+++ b/src/Components/ContactView/ContactView.css
@@ -8,7 +8,7 @@
 .contact-box {
   display: flex;
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   align-items: center;
 }
 
@@ -43,4 +43,15 @@
   display: flex;
   flex-direction: column;
   margin-left: 20px;
+}
+
+@media screen and (max-width: 900px) {
+  .contact-box {
+    display: block;
+  }
+
+  .con {
+    margin: 20px 0;
+  }
+
 }
