--- a/src/Components/ProjectView/ProjectView.css
+++ b/src/Components/ProjectView/ProjectView.css
@@ -22,3 +22,10 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 900px) {
+  .projects-grid {
+    flex-direction: column;
+    min-height: 250px;
+  }
+}
