--- a/src/Components/HomeInfo/HomeInfo.css
+++ b/src/Components/HomeInfo/HomeInfo.css
@@ -117,7 +117,7 @@
 
   .home-img {
     max-width: 55%;
-    margin-bottom: 20px;
+    margin: 15px 0 20px;
   }
 
   .info-socials {
@@ -144,7 +144,7 @@
 
 @media screen and (max-width: 550px) {
   .icon {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
   }
 }
